--- a/src/_navigation/Header/index.scss
+++ b/src/_navigation/Header/index.scss
@@ -5,4 +5,16 @@ header {
    box-shadow: $box-shadow;
    position: relative;
    z-index: 202;
+
+   .logo-link {
+      margin-left: 0.7rem;
+      .logo {
+         // width: 9rem;
+         svg {
+            scale: 0.8;
+            // width: 100%;
+            // height: 100%;
+         }
+      }
+   }
 }
