--- a/src/_navigation/Header/index.scss
+++ b/src/_navigation/Header/index.scss
@@ -9,11 +9,64 @@ header {
    .logo-link {
       margin-left: 0.7rem;
       .logo {
-         // width: 9rem;
          svg {
             scale: 0.8;
-            // width: 100%;
-            // height: 100%;
+         }
+      }
+   }
+
+   .header__content {
+      width: calc(100% - 267.73px);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 3.6rem;
+
+      form {
+         width: 23.7rem;
+         input {
+            font-size: 0.85rem;
+            color: $color-2;
+            padding: 0.5rem 4rem 0.5rem 1rem;
+            background: transparent;
+            border-radius: 8px;
+            border: 1px solid fade-out($color-1, 0.8) !important;
+            &::placeholder {
+               opacity: 0.6;
+            }
+         }
+         .searchIcon {
+            position: absolute;
+            width: 55px;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: $color-4;
+            border-radius: 0px 8px 8px 0;
+         }
+      }
+      .docs {
+         font-size: 0.95rem;
+         color: $color-1;
+         text-transform: capitalize;
+         text-decoration: underline;
+         cursor: pointer;
+      }
+      .user_profile {
+         .img {
+            --size: 2.8rem;
+            width: var(--size);
+            height: var(--size);
+            border-radius: 50%;
+            overflow: hidden;
+         }
+         .name {
+            font-size: 0.95rem;
+            font-weight: 500;
+            text-transform: capitalize;
          }
       }
    }
