--- a/src/_navigation/Sidebar/index.scss
+++ b/src/_navigation/Sidebar/index.scss
@@ -73,23 +73,23 @@
          cursor: pointer;
 
          label {
-            font-size: 0.73rem;
+            font-size: 0.71rem;
             color: $color-2;
             padding: 0 0 0 1.5rem;
             text-transform: uppercase;
-            margin: 25px 0 0px;
+            margin: 25px 0 3px;
             // height: 35px;
          }
          a {
             font-size: 0.95rem;
             font-weight: 500;
-            color: fade-out($color-5, 0.6);
-            padding: 0.8rem 0 0.8rem 1.5rem;
+            color: fade-out($color-5, 0.5);
+            padding: 0.75rem 0 0.75rem 1.5rem;
             text-decoration: none;
             background-color: transparent;
             position: relative;
             text-transform: capitalize;
-            margin: 5px 0 5px;
+            margin: 6px 0 6px;
             transition:
                color 0.35s,
                padding 0.25s ease;
@@ -123,31 +123,28 @@
             }
          }
 
-         // &:hover,
-         // &.active {
-         //    padding-left: 10px;
-         //    a,
-         //    a .link {
-         //       color: $color-1;
-         //    }
-         // }
-
          &.active {
             a,
             a .link {
                font-weight: 700;
             }
          }
-
-         // .icon-wrapper {
-         //    width: 23%;
-
-         //    &.first {
-         //       svg {
-         //          transform: scale(0.75);
-         //       }
-         //    }
-         // }
       }
+      .last {
+         a {
+            color: fade-out($color-5, 0);
+            svg {
+               opacity: 1;
+            }
+         }
+      }
+      hr {
+         margin-top: 3.5rem;
+      }
+   }
+   .version {
+      font-size: 0.8rem;
+      color: $color-1;
+      margin: 1.5rem 1.5rem 0;
    }
 }
