--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,10 @@
+// @font-face {
+//    font-family: 'Gilroy';
+//    font-style: normal;
+//    font-weight: 500;
+//    src: url('../../public/_assets/fonts/Gilroy-Regular.ttf');
+// }
+
 html {
    margin: 0;
    padding: 0;
@@ -12,10 +19,8 @@ html {
       height: 100vh;
       overflow: hidden;
       font-size: 16px;
-      // color: #222222;
-      // text-rendering: geometricPrecision;
-      font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      // background: #010409;
+      font-family: 'Work Sans', sans-serif;
+      font-style: normal;
       box-sizing: border-box;
       -moz-osx-font-smoothing: grayscale;
       -webkit-font-smoothing: antialiased;
