--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,6 +12,9 @@ $color-3: rgba(84, 95, 125, 1);
 $color-4: #39cdcc;
 $color-4a: #39cdcc98;
 $color-5: #213f7d;
+$color-6: #e9b200;
+$color-7: #e4033b;
+$color-8: #39cd62;
 
 $bg-1: rgba(57, 205, 204, 0.06);
 $bg-2: rgba(33, 63, 125, 0.06);
