--- a/src/_navigation/Sidebar/index.scss
+++ b/src/_navigation/Sidebar/index.scss
@@ -140,6 +140,9 @@
       }
       hr {
          margin-top: 3.5rem;
+         height: 1px;
+         background-color: $color-1;
+         border: none;
       }
    }
    .version {
