user-details page

--- a/src/pages/users/[_id]/index.scss
+++ b/src/pages/users/[_id]/index.scss
@@ -87,5 +87,22 @@
             text-transform: capitalize;
          }
       }
+      ul {
+         li {
+            font-size: 0.95rem;
+            // text-transform: capitalize;
+            cursor: pointer;
+            border-bottom: 2px solid transparent;
+            color: fade-out(#000000, 0.2);
+            font-weight: 400;
+            padding: 0.4rem 1.2rem;
+            transition: border-bottom 0.3s color 0.25s ease-in;
+            &:hover,
+            &.active {
+               border-bottom: 2px solid $color-4;
+               color: $color-4;
+            }
+         }
+      }
    }
 }
