--- a/src/_navigation/Sidebar/index.scss
+++ b/src/_navigation/Sidebar/index.scss
@@ -38,6 +38,13 @@
       border-radius: 10px;
    }
 
+   #sidebarIcon {
+      font-size: 1.5rem;
+      position: absolute;
+      right: 1rem;
+      top: 0.5rem;
+   }
+
    &.hidden {
       width: 0;
       min-width: 0;
